Fix Flex Problem On iPhone 5

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,10 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     overflow-wrap: break-word;
+    /*
     display: flex;
     flex-direction: column;
+    */
     font-size: 16px;
     font-family: Verdana, sans-serif;
 }
@@ -42,6 +44,12 @@ main {
     padding: 1em;
     color: white;
     font-size: 1.5em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: center;
 }
 
 section a {
